force-app/main/default/objects/Pending_Purchase__c/Pending_Purchase__c.object-meta.xml
<CustomObject>
    <label>Pending Purchase Order</label>
    <nameField>
        <displayFormat>PP -{0000}</displayFormat>
        <label>Pending Purchase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>