force-app/main/default/objects/Pending_Purchase__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>