force-app/main/default/objects/Pending_Purchase__c/fields/Is_PO_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_PO_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PO Created</label>
    <type>Checkbox</type>
</CustomField>