force-app/main/default/objects/Pending_Purchase__c/fields/Purchase_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Request_Date__c</fullName>
    <label>Purchase Request Date</label>
    <type>Date</type>
</CustomField>