force-app/main/default/objects/Pending_Purchase__c/fields/SAP_DocEntry__c.field-meta.xml
<CustomField>
    <fullName>SAP_DocEntry__c</fullName>
    <label>SAP DocEntry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>