force-app/main/default/objects/Pending_Purchase__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order Placed</fullName>
            </value>
            <value>
                <fullName>Order Confirmed</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Item discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>