force-app/main/default/objects/Pending_Purchase__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Purchase Manager Approved</fullName>
            </value>
            <value>
                <fullName>Warehouse Manager Approved</fullName>
            </value>
            <value>
                <fullName>Finance Manager Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>