force-app/main/default/objects/Pending_Purchase__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipName>Pending_Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>