force-app/main/default/objects/Pending_Purchase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_PO_Created__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>User__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>SAP_DocEntry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>